correcao bug z-index
Former-commit-id: 7e25092ee70f50071b36efb2ae970f797d442fde

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
     border-radius: 13px;
     box-shadow: -10px 10px 0px rgba(183,183,183,.8);
     z-index: -1;
-
+    z-index: 9999;
 }
 
 .col-sm-1{
@@ -158,12 +158,4 @@ body{
     background: url("../img/botoes/gif_on.png") no-repeat; 
     right: -183px;
     bottom: 64px; 
-}
-
-.btn-elemento:hover{
-    opacity: 1.0;
-}
-
-.btn-elemento{
-    z-index: 9999;
 }
